# numpitron

./: .gitignore  README.md  nanotron_ctx.py  pyproject.toml  sample.py  sample_shakespeare.py  train.py  train_shakespeare.py
data/: shakespeare_tokenizer.json
examples/: shakespeare_megatron.json  shakespeare_transformer.json  transformer.json
src/numpitron/: __init__.py
src/numpitron/data/: __init__.py  loader.py  tokenizer.py
src/numpitron/dataloader/: __init__.py  loader.py
src/numpitron/distributed/: __init__.py  all_gather.py  all_reduce.py  all_to_all.py  barrier.py  broadcast.py  gather.py  recv.py  reduce.py  reduce_scatter.py  scatter.py  send.py  world.py
src/numpitron/inference/: __init__.py  sample.py
src/numpitron/model/: __init__.py  config.py  transformer.py
src/numpitron/models/: __init__.py  megatron_lm.py  state.py  transformer.py
src/numpitron/nn/: __init__.py  activation.py  attention.py  core.py  cross_entropy.py  embedding.py  layer.py  linear.py  loss.py  mlp.py  model.py  normalization.py  transformer.py  transformer_block.py
src/numpitron/optimizer/: __init__.py  adam.py
src/numpitron/optimizers/: __init__.py  adam.py
src/numpitron/tensor_parallel/: __init__.py  attention.py  embedding.py  loss.py  mlp.py
tests/: test_activation.py  test_adam.py  test_attention.py  test_distributed.py  test_embedding.py  test_layer.py  test_layer_norm.py  test_linear.py  test_loss.py  test_mlp.py  test_model.py  test_nn.py  test_normalization.py  test_optimizer.py  test_tensor_parallel.py  test_transformer.py  test_transformer_block.py
